--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                   </div>
                   
                   <div class="likes-share-download d-flex align-items-center justify-content-between">
-                      <a href="#"><i class="fa fa-download" aria-hidden="true"></i> دانلود فایل صوتی کامل از طریق کانال تلگرام</a>
+                      <a href="#" id="tt-2"><i class="fa fa-download" aria-hidden="true"></i> دانلود فایل صوتی کامل از طریق کانال تلگرام</a>
                     <div>
-                      <a href="https://mega.nz/file/YLpUGKQJ#C0YvuiDJePh1JtXZ6sViU_FCO7l1GuXz37VdNFlynME"><i class="fa fa-download" aria-hidden="true"></i> دانلود فایل صوتی کامل و کیفیّت اصلی </a>
+                      <a href="https://mega.nz/file/YLpUGKQJ#C0YvuiDJePh1JtXZ6sViU_FCO7l1GuXz37VdNFlynME" id="tt-2"><i class="fa fa-download" aria-hidden="true"></i> دانلود فایل صوتی کامل و کیفیّت اصلی </a>
                     </div>
                   </div>
                 </div>
