--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               
               <div class="welcome-text">
                 <h2 class="h2" data-animation="fadeInUp" data-delay="100ms">رما: رایانش محقق اردبیلی</h2>
-                <h5 class="h2" data-animation="fadeInUp" data-delay="300ms">
+                <h5 class="h2" id="hh" data-animation="fadeInUp" data-delay="300ms">
                     نشریّۀ علمی - صوتی رما به صاحب امتیازی انجمن علمی علوم کامپیوتر 
                   </br>
                   شمارۀ مجوّز و ثبت در کمیتۀ نظارت نشریّات دانشگاهی : ۳۷۴۲/ف/م
@@ -165,7 +165,7 @@
               
               <div class="welcome-text">
                 <h2 class="h2" data-animation="fadeInUp" data-delay="100ms">رما: رایانش محقق اردبیلی</h2>
-                <h5 class="h2" data-animation="fadeInUp" data-delay="300ms">
+                <h5 class="h2" id="hh" data-animation="fadeInUp" data-delay="300ms">
                     نشریّۀ علمی - صوتی رما به صاحب امتیازی انجمن علمی علوم کامپیوتر 
                   </br>
                   شمارۀ مجوّز و ثبت در کمیتۀ نظارت نشریّات دانشگاهی : ۳۷۴۲/ف/م
