--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div class="preloader-thumbnail">
       <img src="./img/core-img/preloader.png" alt="">
     </div>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="preloader-text">
+      لطفاً كمي صبر كنيد
+    </div>
   </div>
 
   <header class="header-area">    
