--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -45,7 +45,7 @@
 	                				</div>
 	                				<div class="myfont testimonial-text bg-1">
 											<p>
-													با زدن یه همچین حرکت هایی، شاهد ایده های باحال و خلّاقی هستیم که علاقه مندا بیشتر جذب مطالب کامپیوتری و اینجور چیزا میشن! براتون آرزوی موفّقیّت دارم <br>
+													نوآوری های موجود در نشریّه، نشان دهندۀ تلاش و علاقه و پشتکار دانشجویان عزیز و دست اندرکاران نشریّه است. برای همۀ دوستان آرزوی پیروزی و بهروزی در تمامی عرصه های زندیگ دارم <br>
 												<a href="https://scholar.google.com/citations?user=BwVBVpkAAAAJ&hl=en" target="_blank">پروفسور اکبری مجد(استاد دپارتمان مهندسی برق و کامپیوتر)</a>
 											</p>
 										</div>
