--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -13,7 +13,7 @@
         <link rel="shortcut icon" href="../img/core-img/logo.png">
     </head>
 
-    <body>
+    <body id="background">
         
         <div class="testimonials-container section-container section-container-image-bg">
 	        <div class="container">
@@ -122,7 +122,7 @@
 	                </div>
 	            </div>
 			</div>
-		</br>
+		
 			<div class="container">
 					<div class="row">
 					  <div class="col-12 text-center">
