--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -15,7 +15,7 @@
 
     <body id="background">
         
-        <div class="testimonials-container section-container section-container-image-bg">
+        <div  id="background" class="testimonials-container section-container section-container-image-bg">
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 testimonials section-description">
