--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -35,7 +35,11 @@
 		                                <p>
 											نشریّات دانشجویی، دریچه ای برای ورود به ذهن پویا و خلّاق دانشجویان معزّز و تبلوری از رشد و بالندگی ایشان است. نشریه رما، بعنوان اوّلین نشریه صوتی دانشجویی انجمن علمی علوم کامپیوتر دانشگاه محقق اردبیلی با محتوایی علمی و تخصٌصی نمادی از اراده و تحرّک است
 											<br/>
-											<a href="https://uma.ac.ir/cv.php?slc_lang=fa&sid=1&mod=scv&cv=203" target="_blank">دکتر شرری (سرپرست امور فرهنگی و اجتماعی دانشگاه محقق اردبیلی)</a>
+											<a href="https://uma.ac.ir/cv.php?slc_lang=fa&sid=1&mod=scv&cv=203" target="_blank">
+												دکتر شرری
+												</br>
+												(سرپرست امور فرهنگی و اجتماعی دانشگاه محقق اردبیلی)
+											</a>
 		                                </p>
 	                                </div>
 	                			</div>
@@ -46,7 +50,11 @@
 	                				<div class="myfont testimonial-text bg-1">
 											<p>
 													نوآوری های موجود در نشریّه، نشان دهندۀ تلاش و علاقه و پشتکار دانشجویان عزیز و دست اندرکاران نشریّه است. برای همۀ دوستان آرزوی پیروزی و بهروزی در تمامی عرصه های زندیگ دارم <br>
-												<a href="https://scholar.google.com/citations?user=BwVBVpkAAAAJ&hl=en" target="_blank">پروفسور اکبری مجد(استاد دپارتمان مهندسی برق و کامپیوتر)</a>
+												<a href="https://scholar.google.com/citations?user=BwVBVpkAAAAJ&hl=en" target="_blank">
+													پروفسور اکبری مجد
+												</br>
+													(استاد دپارتمان مهندسی برق و کامپیوتر)
+												</a>
 											</p>
 										</div>
 	                			</div>
@@ -57,7 +65,11 @@
 	                				<div class="myfont testimonial-text bg-1">
 											<p>
 													تلاش شما و سایر دوستان در این زمینۀ علمی مثال زدنی است و حتماً در آینده شاهد خروجی بسیار مطلوب زحمات شما خواهیم بود <br>
-												<a href="https://scholar.google.com/citations?user=kFOJzocAAAAJ&hl=en" target="_blank">پروفسور هوشمند اصل (استاد دپارتمان علوم کامپیوتر)</a>
+												<a href="https://scholar.google.com/citations?user=kFOJzocAAAAJ&hl=en" target="_blank">
+													پروفسور هوشمند اصل
+												</br>
+													(استاد دپارتمان علوم کامپیوتر)
+												</a>
 											</p>
 										</div>
 	                			</div>
@@ -68,7 +80,11 @@
 	                				<div class="myfont testimonial-text bg-1">
 											<p>
 													با زدن یه همچین حرکت هایی، شاهد ایده های باحال و خلّاقی هستیم که علاقه مندا بیشتر جذب مطالب کامپیوتری و اینجور چیزا میشن! براتون آرزوی موفّقیّت دارم <br>
-												<a href="https://www.aparat.com/jadi/%D8%AC%D8%A7%D8%AF%DB%8C%20%D8%AA%DB%8C%20%D9%88%DB%8C" target="_blank">مهندس جادی (عماد میر میرانی)</a>
+												<a href="https://www.aparat.com/jadi/%D8%AC%D8%A7%D8%AF%DB%8C%20%D8%AA%DB%8C%20%D9%88%DB%8C" target="_blank">
+													مهندس جادی [عماد میر میرانی]
+												</br>
+												(هكر و پادكستر)
+												</a>
 											</p>
 										</div>
 								</div>
@@ -79,7 +95,11 @@
 										<div class="myfont testimonial-text bg-1">
 												<p>
 														فعّالیّت های شما خیلی ارزشمنده؛ محتوای نشریّۀ شما باعث میشه تا نسل جوان بتونن به طور صحیح تر و با جدّیّت بیشتری حرفۀ مورد علاقشونو دنبال کنن <br>
-													<a href="https://www.linkedin.com/in/keyvan-malekmohamadi-05671961?trk=author_mini-profile_title" target="_blank">جناب ملک محمّدی (موسّس استودیو بازیسازی گونای کشور ترکیّه و ایران)</a>
+													<a href="https://www.linkedin.com/in/keyvan-malekmohamadi-05671961?trk=author_mini-profile_title" target="_blank">
+														جناب ملک محمّدی
+													</br>
+														(موسّس استودیو بازیسازی گونای کشور ترکیّه و ایران)
+													</a>
 												</p>
 											</div>
 								</div>
@@ -92,7 +112,11 @@
 												<span class="long-text">
 													پروژۀ رما جدای از بدیع بودن و خلّاقیّت دست‌اندرکاران آن، قوای تحرّک پرانرژی‌ای را برای سایر نشریّات دانشگاه به وجود آورده است که بدون شک موجب افزایش کیفیّت اطّلاع‌رسانی مطالب علمی تخصصی در زمینه‌‌های مختلف خواهد شد. با آرزوی موفّقیّت بیش از پیش برای تمامی عزیزان نشریّه علمی - صوتی رما <br>
 												</span>
-												<a href="https://uma.ac.ir/page.php?slct_pg_id=4118&url_title=%d9%85%d8%b9%d8%b1%d9%81%db%8c-%da%a9%d8%a7%d8%b1%d8%b4%d9%86%d8%a7%d8%b3%d8%a7%d9%86&rewrite_url=1" target="_blank">مهندس بوداقی (کارشناس انجمن های علمی و عضو کمیتۀ نظارت بر نشریّات دانشگاهی)</a>
+												<a href="https://uma.ac.ir/page.php?slct_pg_id=4118&url_title=%d9%85%d8%b9%d8%b1%d9%81%db%8c-%da%a9%d8%a7%d8%b1%d8%b4%d9%86%d8%a7%d8%b3%d8%a7%d9%86&rewrite_url=1" target="_blank">
+													مهندس بوداقی
+												</br>
+													(کارشناس انجمن های علمی و عضو کمیتۀ نظارت بر نشریّات دانشگاهی)
+												</a>
 											</p>
 										</div>
 							</div>
