--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -108,7 +108,7 @@
 										<img src="assets/img/testimonials/7_1.jpg" alt="t7">
 									</div>
 									<div class="myfont testimonial-text bg-1">
-											<p>
+											<p id="long-text-2">
 												<span class="long-text">
 													پروژۀ رما جدای از بدیع بودن و خلّاقیّت دست‌اندرکاران آن، قوای تحرّک پرانرژی‌ای را برای سایر نشریّات دانشگاه به وجود آورده است که بدون شک موجب افزایش کیفیّت اطّلاع‌رسانی مطالب علمی تخصصی در زمینه‌‌های مختلف خواهد شد. با آرزوی موفّقیّت بیش از پیش برای تمامی عزیزان نشریّه علمی - صوتی رما <br>
 												</span>
