--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       <div class="row justify-content-around">
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="single-featured-guest mb-80">
-            <img class="people-img" src="img/people/M_GH.png" alt="">
+            <img class="people-img" src="img/people/M_GH.jpg" alt="">
             <div class="guest-info">
               <h5 class="myfont">مهدی قلعه نویی</h5>
               <span>سرپرست هیات تحریریّه</span>
@@ -431,7 +431,7 @@
 
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="single-featured-guest mb-80">
-            <img class="people-img" src="img/people/M_M.png" alt="">
+            <img class="people-img" src="img/people/M_M.jpg" alt="">
             <div class="guest-info">
               <h5 class="myfont">مطهّره منصوری</h5>
               <span>عضو هیات تحریریّه</span>
@@ -572,7 +572,12 @@
             </div>
             
             <div class="single-latest-episodes">
-              <p class="episodes-date">کانال تلگرام رسمی انجمن علمی علوم کامپیوتر</p>
+              <p class="episodes-date">کانال تلگرام انجمن های علمی</p>
+              <a href="https://t.me/anjoman_elmi_uma" class="episodes-title">ورود به کانال</a>
+            </div>
+
+            <div class="single-latest-episodes">
+              <p class="episodes-date">کانال تلگرام انجمن علمی علوم کامپیوتر</p>
               <a href="https://t.me/CsScientificAssociation" class="episodes-title">ورود به کانال</a>
             </div>
           </div>
@@ -586,7 +591,7 @@
             <div id="w-1" class="footer-social-info d-flex justify-content-end">
               <a href="https://twitter.com/RAMA_UMA_CS" target="_blank" class="twitter" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
               <a href="https://www.instagram.com/cs_scientific_association" target="_blank" class="pinterest" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a>
-              <a href="https://t.me/CsScientificAssociation" target="_blank" class="instagram" data-toggle="tooltip" data-placement="top" title="Telegram"><i class="fa fa-telegram"></i></a>
+              <a href="https://t.me/CsScientificAssociation" target="_blank" class="instagram" data-toggle="tooltip" data-placement="top" title="Telegram"><i class="fa fa-paper-plane"></i></a>
               <a href="mailto:umacs2011@gmail.com" target="_blank" class="pinterest" data-toggle="tooltip" data-placement="top" title="Gmail"><i class="fa fa-envelope"></i></a>
               <a href="https://www.facebook.com/RAMA.UMA.CS" target="_blank" class="facebook" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
             </div>
