--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -9,16 +9,57 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/style.copy.css">
+		<link id="i1" rel="icon" href="./img/core-img/logo.png">
+		<link id="i2" rel="icon" href="./img/core-img/logo.png">
+
+
+		
         <link rel="shortcut icon" href="../img/core-img/logo.png">
     </head>
 
     <body id="background">
-        
+
+        <header class="header-area">    
+			<div class="main-header-area">
+			  <div class="classy-nav-container breakpoint-off">
+				<nav class="classy-navbar justify-content-between" id="pocaNav">
+				  <a class="nav-brand" href="index.html"><img src="../img/core-img/logo.png" alt=""></a>
+				  <div class="classy-navbar-toggler">
+					<span class="navbarToggler"><span></span><span></span><span></span></span>
+				  </div> 
+				  <div class="classy-menu">
+					<div class="classycloseIcon">
+					  <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+					</div>
+					<div class="classynav">
+					  <ul id="nav">
+						<li><a href="../index.html">صفحۀ اصلی</a></li>
+						<li><a href="../single-podcast.html">جدیدترین شمارۀ رما</a></li>
+						<li><a href="../index.html">دست اندرکاران</a></li>
+						<li><a href="../testimonial/index.html">نقل و قول ها</a></li>
+						<li><a href="../index.html">ارتباط با ما</a></li>
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+					  </ul>
+					  <div class="top-social-area">
+						<a href="https://www.facebook.com/RAMA.UMA.CS" target="_blank" class="fa fa-facebook" aria-hidden="true"></a>
+						<a href="https://twitter.com/RAMA_UMA_CS" target="_blank" class="fa fa-twitter" aria-hidden="true"></a>
+						<a href="https://t.me/CsScientificAssociation" target="_blank" class="fa fa-paper-plane" aria-hidden="true"></a>
+						<a href="https://www.instagram.com/cs_scientific_association" target="_blank" class="fa fa-instagram" aria-hidden="true"></a>
+						<a href="mailto:umacs2011@gmail.com" target="_blank" class="fa fa-envelope" aria-hidden="true"></a>
+					  </div>
+					</div>
+				  </div>
+				</nav>
+			  </div>
+			</div>
+		  </header>
+
         <div class="testimonials-container section-container section-container-image-bg">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 testimonials section-description">
+	                <div class="col-sm-12 testimonials section-description" style="margin-top:99px">
 	                	<h2 class="myfont">نقل و قول ها</h2>
 	                    <p class="myfont medium-paragraph">در زیر می توانید تعدادی از توصیفات بزرگان و متخصصین را دربارۀ نشریّۀ رایانش محقق اردبیلی مطالعه نمایید</p>
 	                </div>
@@ -35,11 +76,7 @@
 		                                <p>
 											نشریّات دانشجویی، دریچه ای برای ورود به ذهن پویا و خلّاق دانشجویان معزّز و تبلوری از رشد و بالندگی ایشان است. نشریه رما، بعنوان اوّلین نشریه صوتی دانشجویی انجمن علمی علوم کامپیوتر دانشگاه محقق اردبیلی با محتوایی علمی و تخصٌصی نمادی از اراده و تحرّک است
 											<br/>
-											<a href="https://uma.ac.ir/cv.php?slc_lang=fa&sid=1&mod=scv&cv=203" target="_blank">
-												دکتر شرری
-												</br>
-												(سرپرست امور فرهنگی و اجتماعی دانشگاه محقق اردبیلی)
-											</a>
+											<a href="https://uma.ac.ir/cv.php?slc_lang=fa&sid=1&mod=scv&cv=203" target="_blank">دکتر معراج شرری</br> (مدیر حمایت و پشتیبانی فرهنگی و اجتماعی دانشگاه)</a>
 		                                </p>
 	                                </div>
 	                			</div>
@@ -49,12 +86,8 @@
 	                				</div>
 	                				<div class="myfont testimonial-text bg-1">
 											<p>
-													نوآوری های موجود در نشریّه، نشان دهندۀ تلاش و علاقه و پشتکار دانشجویان عزیز و دست اندرکاران نشریّه است. برای همۀ دوستان آرزوی پیروزی و بهروزی در تمامی عرصه های زندیگ دارم <br>
-												<a href="https://scholar.google.com/citations?user=BwVBVpkAAAAJ&hl=en" target="_blank">
-													پروفسور اکبری مجد
-												</br>
-													(استاد دپارتمان مهندسی برق و کامپیوتر)
-												</a>
+													نوآوری های موجود در نشریّه، نشان دهندۀ تلاش و علاقه و پشتکار دانشجویان عزیز و دست اندرکاران نشریّه است. برای همۀ دوستان آرزوی پیروزی و بهروزی در تمامی عرصه های زندگی دارم <br>
+													<a href="https://scholar.google.com/citations?user=BwVBVpkAAAAJ&hl=en" target="_blank">پروفسور اکبری مجد</br>(استاد دپارتمان مهندسی برق و کامپیوتر)</a>
 											</p>
 										</div>
 	                			</div>
@@ -65,11 +98,7 @@
 	                				<div class="myfont testimonial-text bg-1">
 											<p>
 													تلاش شما و سایر دوستان در این زمینۀ علمی مثال زدنی است و حتماً در آینده شاهد خروجی بسیار مطلوب زحمات شما خواهیم بود <br>
-												<a href="https://scholar.google.com/citations?user=kFOJzocAAAAJ&hl=en" target="_blank">
-													پروفسور هوشمند اصل
-												</br>
-													(استاد دپارتمان علوم کامپیوتر)
-												</a>
+												<a href="https://scholar.google.com/citations?user=kFOJzocAAAAJ&hl=en" target="_blank">پروفسور هوشمند اصل</br> (استاد دپارتمان علوم کامپیوتر)</a>
 											</p>
 										</div>
 	                			</div>
@@ -112,11 +141,7 @@
 												<span class="long-text">
 													پروژۀ رما جدای از بدیع بودن و خلّاقیّت دست‌اندرکاران آن، قوای تحرّک پرانرژی‌ای را برای سایر نشریّات دانشگاه به وجود آورده است که بدون شک موجب افزایش کیفیّت اطّلاع‌رسانی مطالب علمی تخصصی در زمینه‌‌های مختلف خواهد شد. با آرزوی موفّقیّت بیش از پیش برای تمامی عزیزان نشریّه علمی - صوتی رما <br>
 												</span>
-												<a href="https://uma.ac.ir/page.php?slct_pg_id=4118&url_title=%d9%85%d8%b9%d8%b1%d9%81%db%8c-%da%a9%d8%a7%d8%b1%d8%b4%d9%86%d8%a7%d8%b3%d8%a7%d9%86&rewrite_url=1" target="_blank">
-													مهندس بوداقی
-												</br>
-													(کارشناس انجمن های علمی و عضو کمیتۀ نظارت بر نشریّات دانشگاهی)
-												</a>
+												<a href="https://uma.ac.ir/page.php?slct_pg_id=4118&url_title=%d9%85%d8%b9%d8%b1%d9%81%db%8c-%da%a9%d8%a7%d8%b1%d8%b4%d9%86%d8%a7%d8%b3%d8%a7%d9%86&rewrite_url=1" target="_blank">سعید بوداقی</br>(کارشناس انجمن های علمی و نشریّات دانشگاه)</a>
 											</p>
 										</div>
 							</div>
@@ -157,10 +182,17 @@
 
         </div>
 
+		<script src="../js/jquery.min.js"></script>
+  		<script src="../js/popper.min.js"></script>
+  		<script src="../js/bootstrap.min.js"></script>
+ 		 <script src="../js/poca.bundle.js"></script>
+		  <script src="../js/default-assets/active.js"></script>
+		  
         <script src="assets/js/jquery-1.11.1.min.js"></script>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/jquery.backstretch.min.js"></script>
         <script src="assets/js/scripts.js"></script>
+
 
     </body>
 
