--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -141,7 +141,7 @@
 												<span class="long-text">
 													پروژۀ رما جدای از بدیع بودن و خلّاقیّت دست‌اندرکاران آن، قوای تحرّک پرانرژی‌ای را برای سایر نشریّات دانشگاه به وجود آورده است که بدون شک موجب افزایش کیفیّت اطّلاع‌رسانی مطالب علمی تخصصی در زمینه‌‌های مختلف خواهد شد. با آرزوی موفّقیّت بیش از پیش برای تمامی عزیزان نشریّه علمی - صوتی رما <br>
 												</span>
-												<a href="https://uma.ac.ir/page.php?slct_pg_id=4118&url_title=%d9%85%d8%b9%d8%b1%d9%81%db%8c-%da%a9%d8%a7%d8%b1%d8%b4%d9%86%d8%a7%d8%b3%d8%a7%d9%86&rewrite_url=1" target="_blank">سعید بوداقی</br>(کارشناس انجمن های علمی و نشریّات دانشگاه)</a>
+												<a href="https://uma.ac.ir/page.php?slct_pg_id=4118&url_title=%d9%85%d8%b9%d8%b1%d9%81%db%8c-%da%a9%d8%a7%d8%b1%d8%b4%d9%86%d8%a7%d8%b3%d8%a7%d9%86&rewrite_url=1" target="_blank">مهندس سعید بوداقی</br>(کارشناس انجمن های علمی و نشریّات دانشگاه)</a>
 											</p>
 										</div>
 							</div>
