--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Poca - Podcast &amp; Audio Template">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="google-site-verification" content="PHhjy9XFLrdnk3Kz2zseVNzATDobv5FcGbjTKQ_DEg0" />
   <title>رایانش محقق اردبیلی | نشریه رما</title>
   <link id="i1" rel="icon" href="./img/core-img/logo.png">
   <link id="i2" rel="icon" href="./img/core-img/logo.png">
