--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="google-site-verification" content="PHhjy9XFLrdnk3Kz2zseVNzATDobv5FcGbjTKQ_DEg0" />
   <title>رایانش محقق اردبیلی | نشریه رما</title>
+  <meta name="robots" content="index, follow" />
   <link id="i1" rel="icon" href="./img/core-img/logo.png">
   <link id="i2" rel="icon" href="./img/core-img/logo.png">
   <link rel="stylesheet" href="style.css">
