--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="button-group filters-button-group">
-                    <a class="button is-checked" data-filter="*"><span>SHOW ALL</span></a>
-                    <a class="button" data-filter=".design"><span>Season 1: Persian</span></a>
+                    <a class="button" data-filter="*"><span>SHOW ALL</span></a>
+                    <a class="button is-checked" data-filter=".design"><span>Season 1: Persian</span></a>
                     <a class="button" data-filter=".development"><span>Season 2: English/Persian</span></a>
                 </div>
                 <div class="grid">
