--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                     <img class="card-image" src="images/s-b.jpg" alt="alternative">
                                     <div class="card-body">
                                         <div class="testimonial-text">Apart from being innovative and creative, the R.A.M.A. project has created energetic driving forces for other university publications, which will undoubtedly increase the quality of information of specialized scientific materials in various fields.</div>
-                                        <div class="testimonial-author">Mr. Sead Bodaghi - Scientific Associations & University Publications Specialist</div>
+                                        <div class="testimonial-author">Mr. Saeed Bodaghi - Scientific Associations & University Publications Specialist</div>
                                     </div>
                                 </div>
                             </div> 
