--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta property="og:site" content="https://www.ramacs.ir" />
 	<meta property="og:title" content="RAMA"/>
 	<meta property="og:description" content="The scientific-audio journal R.A.M.A, consisting of students specializing in Technology, Art and Production and Content Management, strives to provide the best and latest content in the field of Information and Communication Technology to science lovers." />
+	<link rel="shortcut icon" href="logo.ico" type="image/x-icon"> 
     <title>RAMA | Audio Journal</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
