--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div id="myheader" class="text-container">
-                            <h1>R.A.M.A: A novel way for <span id="js-rotating">learning specialized contents., enjoying applied scientific aspects., getting latest technology news.</span></h1>
+                            <h1>R.A.M.A: A New Way for <span id="js-rotating">Learning Specialized Contents., Enjoying Applied Scientific Aspects., Getting Latest Technology News.</span></h1>
                             <p class="p-heading p-large"></br>Welcome to Official R.A.M.A. Webpage</br></br>The 1<sup>st</sup> Student Computer Science Audio Journal in Iran</br></br>Presented by University of Mohaghegh Ardabili</br></br>Scientific Association of Computer Science</br></p>
                             <a class="btn-solid-lg page-scroll" href="#intro">Discover R.A.M.A.</a>
                         </br>
@@ -111,8 +111,8 @@
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
                         <h2>Introduction Note</h2>
-                        <p id="p-2">The scientific-audio journal R.A.M.A, consisting of students specializing in Technology, Art and Production and Content Management, strives to provide the best and latest content in the field of Information and Communication Technology to science lovers.</p>
-                        <p id="p-2" class="testimonial-text">"Our mission here at R.A.M.A. is to make the scientific concepts more clear for enthusiasts by presenting them in a modern and novel ways."</p>
+                        <p id="p-2">The R.A.M.A scientific-audio journal , consisting of students specializing in Technology, Art and Production and Content Management, trying to provide the best and latest content in the field of Information and Communication Technology to science lovers.</p>
+                        <p id="p-2" class="testimonial-text">"Our mission here at R.A.M.A. is to make the scientific concepts more clear for enthusiasts by presenting them in a modern and novel way."</p>
                         <div class="testimonial-author">Pouya Danandeh - Founder & Former CEO</div>
                     </div>
                 </div>
@@ -431,7 +431,7 @@
                                     <img class="card-image" src="images/s-b.jpg" alt="alternative">
                                     <div class="card-body">
                                         <div class="testimonial-text">Apart from being innovative and creative, the R.A.M.A. project has created energetic driving forces for other university publications, which will undoubtedly increase the quality of information of specialized scientific materials in various fields.</div>
-                                        <div class="testimonial-author">Mr. Saeed Bodaghi - Scientific Associations & University Publications Specialist</div>
+                                        <div class="testimonial-author">Mr. Saeed Bodaghi - Scientific Associations & University Publications Administrator</div>
                                     </div>
                                 </div>
                             </div> 
@@ -520,8 +520,8 @@
                             <img id="m-gha" class="img-fluid img-3" src="images/m-gha.png" alt="alternative">
                         </div> 
                         <p class="p-large">Mehdi Ghasemi</p>
-                        <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>English Language Teaching</p>
+                        <p class="job-title-2">Narration Team Leader</p>
+                        <p class="p-small"><b>Field of Study:</b></br>English Language Teaching</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -529,7 +529,7 @@
                         </div> 
                         <p class="p-large">Anita Mohebbi</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Physics - Astrophysics</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Physics - Astrophysics</p>
                     </div>
                      <div class="team-member">
                         <div class="image-wrapper">
@@ -537,7 +537,7 @@
                         </div> 
                         <p class="p-large">Zahra Shiri</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>English Language Teaching</p>
+                        <p class="p-small"><b>Field of Study:</b></br>English Language Teaching</p>
                     </div>
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -545,7 +545,7 @@
                         </div> 
                         <p class="p-large">Armin Mehrjoo Nezhad</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>English Language Teaching</p>
+                        <p class="p-small"><b>Field of Study:</b></br>English Language Teaching</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -553,7 +553,7 @@
                         </div> 
                         <p class="p-large">Melika Khasipour</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>English Language Teaching</p>
+                        <p class="p-small"><b>Field of Study:</b></br>English Language Teaching</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -561,7 +561,7 @@
                         </div> 
                         <p class="p-large">Shiva Borhanifar</p>
                         <p class="job-title-2">Technical Team - Staff</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Science</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -569,7 +569,7 @@
                         </div> 
                         <p class="p-large">Sahar Khorshid</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Engineering</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Engineering</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -577,7 +577,7 @@
                         </div> 
                         <p class="p-large">Alireza Khodaei</p>
                         <p class="job-title-2">Scientific Team - Author</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Science-Systems Theory</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Science-Systems Theory</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -585,7 +585,7 @@
                         </div> 
                         <p class="p-large">Faezeh Nazari</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Mathematical Finance</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Mathematical Finance</p>
                     </div>
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -593,7 +593,7 @@
                         </div>
                         <p class="p-large">Zahra Bayrami</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Designing & Visual Arts</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Designing & Visual Arts</p>
                     </div>
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -601,7 +601,7 @@
                         </div> 
                         <p class="p-large">Mehdi Ghalenoii</p>
                         <p class="job-title-2">Scientific Team - Author</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Science</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -609,7 +609,7 @@
                         </div>
                         <p class="p-large">Motahereh Mansouri</p>
                         <p class="job-title-2">Scientific Team - Author</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Science</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -617,7 +617,7 @@
                         </div>
                         <p class="p-large">Afsaneh Moharrami</p>
                         <p class="job-title-2">Technical Team - Staff</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Science</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -625,7 +625,7 @@
                         </div> 
                         <p class="p-large">Nima Farrokhi</p>
                         <p class="job-title-2">Technical Team - Staff</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Science</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -633,7 +633,7 @@
                         </div> 
                         <p class="p-large">Shayan Abbasi</p>
                         <p class="job-title-2">Artistic Team - Narrator</p>
-                        <p class="p-small"><b>Academic Field:</b></br>Computer Science</p>
+                        <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                 </div> 
             </div>
