--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                             <img id="A_KH" class="img-fluid img-3" src="images/A_KH.png" alt="alternative">
                         </div> 
                         <p class="p-large">Alireza Khodaei</p>
-                        <p class="job-title-2">Scientific Team - Author</p>
+                        <p class="job-title-2">Scientific Team - Writer</p>
                         <p class="p-small"><b>Field of Study:</b></br>Computer Science-Systems Theory</p>
                     </div> 
                     <div class="team-member">
@@ -600,7 +600,7 @@
                             <img class="img-fluid img-3" src="images/M_GH.png" alt="alternative">
                         </div> 
                         <p class="p-large">Mehdi Ghalenoii</p>
-                        <p class="job-title-2">Scientific Team - Author</p>
+                        <p class="job-title-2">Scientific Team - Writer</p>
                         <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                     <div class="team-member">
@@ -608,7 +608,7 @@
                             <img class="img-fluid img-3" src="images/M_M.png" alt="alternative">
                         </div>
                         <p class="p-large">Motahereh Mansouri</p>
-                        <p class="job-title-2">Scientific Team - Author</p>
+                        <p class="job-title-2">Scientific Team - Writer</p>
                         <p class="p-small"><b>Field of Study:</b></br>Computer Science</p>
                     </div> 
                     <div class="team-member">
@@ -639,10 +639,6 @@
             </div>
         </div> 
     </div> 
-
-
-
-
 
     <div id="about" class="counter">
         <div class="container">
