--- a/sponsers.html
+++ b/sponsers.html
@@ -88,7 +88,7 @@
                     <div class="col-lg-12">
                         <div id="myheader" class="text-container">
                             <h1>R.A.M.A: A novel way for <span id="js-rotating">learning specialized contents., enjoying scientific aspects., getting latest technology news.</span></h1>
-                            <p class="p-heading p-large"></br>Welcome to Official R.A.M.A. Webpage</br></br>The 1<sup>th</sup> Computer Science Audio Journal in Iran</br></br>Presented by University of Mohaghegh Ardabili</br></br>Scientific Association of Computer Science</br></p>
+                            <p class="p-heading p-large"></br>Welcome to Official R.A.M.A. Webpage</br></br>The 1<sup>st</sup> Computer Science Audio Journal in Iran</br></br>Presented by University of Mohaghegh Ardabili</br></br>Scientific Association of Computer Science</br></p>
                             <a class="btn-solid-lg page-scroll" href="#sponsors">Discover R.A.M.A.</a>
                         </div>
                     </div>
