--- a/sponsers.html
+++ b/sponsers.html
@@ -275,6 +275,29 @@
                     </div> 
                 </div> 
             </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="team-member">
+                        <a href="https://t.me/riazitabriz967" target="_blank"><div class="image-wrapper">
+                            <img id="p_d" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-10.png" alt="alternative">
+                        </div></a>
+                        <p class="p-small"><b>Scientific Assocaition of Tabriz U.
+                            </br>
+                            Mathematical Sceinces
+                        </b></p>
+                    </div> 
+                    <div class="team-member">
+                        <a href="https://t.me/CSAOEF" target="_blank"><div class="image-wrapper">
+                            <img id="n_a" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-11.png" alt="alternative">
+                        </div> </a>
+                        <p class="p-small"><b>Scientific Assocaition of Guilan U.
+                        </br>
+                        Computer Engineering
+                        </b>
+                        </p>
+                    </div>
+                </div> 
+            </div>
             <a class="btn-solid-lg" href="index.html#sponsors">Back to the home page</a>
         </div> 
     </div> 
