--- a/sponsers.html
+++ b/sponsers.html
@@ -88,7 +88,7 @@
                     <div class="col-lg-12">
                         <div id="myheader" class="text-container">
                             <h1>R.A.M.A: A novel way for <span id="js-rotating">learning specialized contents., enjoying scientific aspects., getting latest technology news.</span></h1>
-                            <p class="p-heading p-large"></br>Welcome to Official R.A.M.A. Webpage</br></br>The 1<sup>st</sup> Computer Science Audio Journal in Iran</br></br>Presented by University of Mohaghegh Ardabili</br></br>Scientific Association of Computer Science</br></p>
+                            <p class="p-heading p-large"></br>Welcome to Official R.A.M.A. Webpage</br></br>The 1<sup>th</sup> Computer Science Audio Journal in Iran</br></br>Presented by University of Mohaghegh Ardabili</br></br>Scientific Association of Computer Science</br></p>
                             <a class="btn-solid-lg page-scroll" href="#sponsors">Discover R.A.M.A.</a>
                         </div>
                     </div>
@@ -273,29 +273,6 @@
                         </b>
                         </p>
                     </div> 
-                </div> 
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="team-member">
-                        <a href="https://t.me/riazitabriz967" target="_blank"><div class="image-wrapper">
-                            <img id="p_d" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-10.png" alt="alternative">
-                        </div></a>
-                        <p class="p-small"><b>Scientific Assocaition of Tabriz U.
-                            </br>
-                            Mathematical Sceinces
-                        </b></p>
-                    </div> 
-                    <div class="team-member">
-                        <a href="https://t.me/CSAOEF" target="_blank"><div class="image-wrapper">
-                            <img id="n_a" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-11.png" alt="alternative">
-                        </div> </a>
-                        <p class="p-small"><b>Scientific Assocaition of Guilan U.
-                        </br>
-                        Computer Engineering
-                        </b>
-                        </p>
-                    </div>
                 </div> 
             </div>
             <a class="btn-solid-lg" href="index.html#sponsors">Back to the home page</a>
