--- a/index.html
+++ b/index.html
@@ -172,10 +172,34 @@
                         </b>
                         </p>
                     </div>
-                    <a class="btn-solid-lg" href="sponsers.html#sponsors">Click to see more sponsers</a>
                 </div> 
             </div>
-
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="team-member">
+                        <a href="https://t.me/TMU_IEEE" target="_blank"><div class="image-wrapper">
+                            <img id="p_d" class="img-fluid img-3 " src="images/Sponsors/Sponsors-2/logo-10.png" alt="alternative">
+                        </div></a>
+                        <p class="p-small"><b>IEEE Iran Section
+                        </br>
+                        Tarbiat Modares University
+                        </b>
+                        </p>
+                    </div> 
+                    <div class="team-member">
+                        <a href="https://t.me/iust_cesa" target="_blank"><div class="image-wrapper">
+                            <img id="n_a" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-7.png" alt="alternative">
+                        </div> </a>
+                        <p class="p-small"><b>Scientific Assocaition of I.U.S.T.
+                        </br>
+                        Computer Engineering
+                        </b>
+                        </p>
+                    </div>
+                </div> 
+                
+            </div>
+            <a class="btn-solid-lg" href="sponsers.html#sponsors">Click to see more sponsers</a>
         </div> 
     </div> 
 
@@ -598,7 +622,7 @@
                             <img id="m-gha" class="img-fluid img-3" src="images/m-gha.png" alt="alternative">
                         </div> 
                         <p class="p-large">Mehdi Ghasemi</p>
-                        <p class="job-title-2">Artistic Team - Narrator</p>
+                        <p class="job-title-2">Narration Team Leader</p>
                         <p class="p-small"><b>Academic Field:</b></br>English Language Teaching</p>
                     </div> 
                     <div class="team-member">
