--- a/sponsers.html
+++ b/sponsers.html
@@ -67,6 +67,12 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
+                    <a href="https://t.me/CsScientificAssociation" target="_blank">
+                        <span class="hexagon"></span>
+                        <i class="fab fa-telegram fa-stack-1x"></i>
+                    </a>
+                </span>
+                <span class="fa-stack">
                     <a href="https://anchor.fm/ramaofficial" target="_blank">
                         <span class="hexagon"></span>
                         <i class="fas fa-anchor fa-stack-1x"></i>
@@ -244,20 +250,30 @@
                         </b></p>
                     </div> 
                     <div class="team-member">
-                        <a href="https://t.me/iust_cesa" target="_blank"><div class="image-wrapper">
-                            <img id="n_a" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-7.png" alt="alternative">
+                        <a href="https://basna.ir" target="_blank"><div class="image-wrapper">
+                            <img id="dr_m" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-13.png" alt="alternative">
                         </div> </a>
-                        <p class="p-small"><b>Scientific Assocaition of I.U.S.T.
+                        <p class="p-small"><b>Bu-Ali Sina News Agency
+                        </br>
+                        Bu-Ali Sina University
+                        </b>
+                        </p>
+                    </div> 
+                    <div class="team-member">
+                        <a href="https://t.me/ce_khu" target="_blank"><div class="image-wrapper">
+                            <img id="dr_m" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-11.png" alt="alternative">
+                        </div> </a>
+                        <p class="p-small"><b>Scientific Assocaition of K.N.T.U.
                         </br>
                         Computer Engineering
                         </b>
                         </p>
                     </div>
                     <div class="team-member">
-                        <a href="https://t.me/RCES_95" target="_blank"><div class="image-wrapper">
-                            <img id="dr_m" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-8.png" alt="alternative">
+                        <a href="https://t.me/CSAOEF" target="_blank"><div class="image-wrapper">
+                            <img id="dr_m" class="img-fluid img-3" src="images/Sponsors/Sponsors-2/logo-12.png" alt="alternative">
                         </div> </a>
-                        <p class="p-small"><b>Scientific Assocaition of RaziU.
+                        <p class="p-small"><b>Scientific Assocaition of Guilan U.
                         </br>
                         Computer Engineering
                         </b>
@@ -273,6 +289,7 @@
                         </b>
                         </p>
                     </div> 
+                    
                 </div> 
             </div>
             <a class="btn-solid-lg" href="index.html#sponsors">Back to the home page</a>
