--- a/index.html
+++ b/index.html
@@ -659,9 +659,6 @@
                         </div>
                         <p class="job-title p-large">Pouya Danandeh</p>
                         <p class="job-title-2">Founder & Former CEO</p>
-                        <p class="p-small">Mobile Application Developer</br>UI/UX Designer</p>
-                        <p class="job-title-2">Research Interests:</p>
-                        <p class="p-small">Artificial Intelligence</br>Soft Computing</p>
                         <a href="https://www.linkedin.com/in/pooya-danandeh-b71485190/" target="_blank" style="text-decoration: none;"><p class="job-title-2"><i class="fas fa-user"></i> Academic Homepage</p></a>
                     </div> 
                     <div class="team-member">
@@ -670,10 +667,7 @@
                         </div> 
                         <p class="job-title p-large">Navid Abapour</p>
                         <p class="job-title-2">Chief Editor & Director</p>
-                        <p class="p-small">Full-Stack Developer </br>Information Security Engineer</p>
-                        <p class="job-title-2">Research Interests:</p>
-                        <p class="p-small">Computational Complexity Theory</br>Applied Cryptography</p>
-                        <a href="https://www.navidabapour.ir" target="_blank" style="text-decoration: none;"><p class="job-title-2"><i class="fas fa-user"></i> Academic Homepage</p></a>
+                        <a href="https://www.researchgate.net/profile/Navid-Abapour-2" target="_blank" style="text-decoration: none;"><p class="job-title-2"><i class="fas fa-user"></i> Academic Homepage</p></a>
                     </div>
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -681,9 +675,6 @@
                         </div> 
                         <p class="job-title p-large">Dr. M.B. Moghimi</p>
                         <p class="job-title-2">Scientific Supervisor</p>
-                        <p class="p-small">Ph.D. in Mathematical Analysis</br>Associate Professor of Mathmatics</p>
-                        <p class="job-title-2">Research Interests:</p>
-                        <p class="p-small">Numerical Range & Chaos Theory</br>Pseudometric Space</p>
                         <a href="https://www.researchgate.net/profile/Mohammad-Bagher-Farshbaf-Moghimi" target="_blank" style="text-decoration: none;"><p class="job-title-2"><i class="fas fa-user"></i> Academic Homepage</p></a>
                     </div> 
                     <div class="team-member">
@@ -692,9 +683,6 @@
                         </div> 
                         <p class="job-title p-large">Rasoul Mahboub</p>
                         <p class="job-title-2">Head of Editorial Board</p>
-                        <p class="p-small">Android Application Developer</br>Finance Engineer</p>
-                        <p class="job-title-2">Research Interests:</p>
-                        <p class="p-small">E-commerce & Behavioral Finance</br>Cryptocurrency</p>
                         <a href="https://www.researchgate.net/profile/Rasoul-Mahboub" target="_blank" style="text-decoration: none;"><p class="job-title-2"><i class="fas fa-user"></i> Academic Homepage</p></a>
                     </div>
                 </div> 
